* removed json_encode * fixed CSS alignments * fixed rule checked for boolean * added onKeywordBlur function to clean keyword * updated header meta data * bumped plugin version to 1.2.0

--- a/resources/css/wtt-core.css
+++ b/resources/css/wtt-core.css
@@ -730,7 +730,58 @@ table {
 .wtt-page-score-area {
     min-height: 110px;
     width: 100%;
-    padding: 0 0 0 50px !important;
+    /*padding-left: 19% !important;*/
+}
+
+.wtt-page-score-area > .wtt-seo-cell {
+    padding-left: 19%;
+}
+
+.wtt-tbl-cell {
+    display: table-cell;
+    vertical-align: bottom;
+    padding-bottom: 5px !important;
+    width: 66%;
+}
+
+@media (max-width: 1920px) {
+    .wtt-page-score-area > .wtt-seo-cell {
+        padding-left: 17% !important;
+    }
+
+    .wtt-tbl-cell {
+        width: 65%;
+    }
+}
+
+@media (max-width: 1667px) {
+    .wtt-page-score-area > .wtt-seo-cell {
+        padding-left: 15% !important;
+    }
+
+    .wtt-tbl-cell {
+        width: 61%;
+    }
+}
+
+@media (max-width: 1440px) {
+    .wtt-page-score-area > .wtt-seo-cell {
+        padding-left: 13% !important;
+    }
+
+    .wtt-tbl-cell {
+        width: 60%;
+    }
+}
+
+@media (max-width: 1024px) {
+    .wtt-page-score-area > .wtt-seo-cell {
+        padding-left: 19% !important;
+    }
+
+    .wtt-tbl-cell {
+        width: 67%;
+    }
 }
 
 .wtt-page-score-area .wtt-score-error {
@@ -739,11 +790,7 @@ table {
     color: #a94442;
 }
 
-.wtt-tbl-cell {
-    display: table-cell;
-    vertical-align: bottom;
-    padding-bottom: 5px !important;
-}
+
 
 .page-score {
     width: 110px;
@@ -791,12 +838,12 @@ table {
 }*/
 
 #page-score .page-score-text, .page-score .page-score-text {
-    width: 120px;
+    width: 110px;
     position: absolute;
     text-align: center;
     display: inline-block;
-    line-height: 130px;
-    font-size: 27px;
+    line-height: 123px;
+    font-size: 25px;
     font-weight: 700;
 }
 
@@ -806,7 +853,7 @@ table {
     text-align: center;
     display: inline-block;
     line-height: 100px;
-    font-size: 22px;
+    font-size: 20px;
     font-weight: 700;
     color: #D5D5D5;
 }
@@ -1635,30 +1682,6 @@ textarea#wtt_description {
     background-color: #31b0d5;
     border-color: #269abc;
 }
-
-
-
-#wtt-menu-outer {
-    height: 84px;
-}
-
-.wtt-table {
-    display: table;   /* Allow the centering to work */
-    margin: 0 auto;
-}
-
-ul#wtt-horizontal-list {
-    min-width: 696px;
-    list-style: none;
-    padding-top: 20px;
-}
-ul#wtt-horizontal-list li {
-    display: inline;
-}
-
-
-
-
 
 
 /* ---- Score Box CSS ---- */
